Roman fix of linking problem with Windows DS. Refs #194.

--- a/Code/Mantid/PythonAPI/PythonAPI.vcproj
+++ b/Code/Mantid/PythonAPI/PythonAPI.vcproj
@@ -167,6 +167,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\PyAlgorithm.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\PythonInterface.cpp"
 				>
 			</File>
@@ -182,6 +186,10 @@
 			>
 			<File
 				RelativePath=".\inc\MantidPythonAPI\FrameworkManager.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidPythonAPI\PyAlgorithm.h"
 				>
 			</File>
 			<File
