Matrix windows can pick up changes in the underlying workspaces such as replacement and deletion. re #233

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -228,6 +228,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\UpdateDAE.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadRaw\vms_convert.cpp"
 				>
 			</File>
@@ -327,6 +331,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidDataHandling\ShapeFactory.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\UpdateDAE.h"
 				>
 			</File>
 			<File
