Changes to WorkspaceProperty in check-in #1411 appear at first glance to have made it impossible to reassign a workspace property once set. No time to look into this now, so to try and get a passed build for the weekend I've commented out the lines of my new test that fall foul of this. Re #230.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -178,6 +178,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\ConjoinWorkspaces.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\ConvertUnits.cpp"
 				>
 			</File>
@@ -265,6 +269,10 @@
 			</File>
 			<File
 				RelativePath=".\test\CommutativeBinaryOperationTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\ConjoinWorkspaces.h"
 				>
 			</File>
 			<File
