--- a/Code/Mantid/MatlabAPI/MatlabAPI.vcproj
+++ b/Code/Mantid/MatlabAPI/MatlabAPI.vcproj
@@ -41,10 +41,11 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="inc;../Kernel/inc;../DataObjects/inc;../Geometry/inc;../API/inc;../DataHandling/inc;../../Third_Party/include;c:/matlab/R2006a/extern/include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;IN_MANTID_MATLAB_API=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="MATLAB_MEX_FILE;WIN32;_DEBUG;_WINDOWS;_USRDLL;IN_MANTID_MATLAB_API=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
+				StructMemberAlignment="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -61,10 +62,17 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)API.lib $(SolutionName)Kernel.lib $(SolutionName)Geometry.lib $(SolutionName)DataHandling.lib libmex.lib libmx.lib"
-				LinkIncremental="2"
+				LinkLibraryDependencies="true"
+				AdditionalDependencies=" libmex.lib libmx.lib libmat.lib"
+				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
+				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\..\Third_Party\lib\win32;..\Debug;c:\matlab\R2006a\extern\lib\win32\microsoft"
+				IgnoreAllDefaultLibraries="false"
+				ModuleDefinitionFile="linkoptions.def"
 				GenerateDebugInformation="true"
+				GenerateMapFile="true"
+				MapFileName="$(IntDir)\MantidMatlabAPI.map"
+				MapExports="false"
 				SubSystem="2"
 				TargetMachine="1"
 			/>
@@ -119,7 +127,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="inc;../Kernel/inc;../DataObjects/inc;../Geometry/inc;../API/inc;../DataHandling/inc;../../Third_Party/include;c:/matlab/R2006a/extern/include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;IN_MANTID_MATLAB_API=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="MATLAB_MEX_FILE;WIN32;NDEBUG;_WINDOWS;_USRDLL;IN_MANTID_MATLAB_API=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -138,9 +146,14 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="$(SolutionName)API.lib $(SolutionName)Kernel.lib $(SolutionName)Geometry.lib $(SolutionName)DataHandling.lib libmex.lib libmx.lib"
+				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\..\Third_Party\lib\win32;..\Release;c:\matlab\R2006a\extern\lib\win32\microsoft"
+				ModuleDefinitionFile="linkoptions.def"
 				GenerateDebugInformation="true"
+				GenerateMapFile="true"
+				MapFileName="$(IntDir)\MantidMatlabAPI.map"
+				MapExports="false"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -181,7 +194,15 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\linkoptions.def"
+				>
+			</File>
+			<File
 				RelativePath=".\src\MatlabInterface.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\MATLAB\R2006a\extern\src\mwdebug.c"
 				>
 			</File>
 		</Filter>
