Update paths. Refs #152.

--- a/Code/Mantid/MatlabAPI/mfiles/Mantid.properties
+++ b/Code/Mantid/MatlabAPI/mfiles/Mantid.properties
@@ -1,5 +1,5 @@
 #framework configuration
-plugins.directory = ../../debug
+plugins.directory = c:\\mantid\\code\\mantid\\debug
 
 #logging configuration
 logging.loggers.root.level = information
