Added basic SaveNexusProcessed method, still needs some work to write all data. Also added some unit tests. Existing SaveNexus method not yet replaced. Re #215

--- a/Code/Mantid/Nexus/Nexus.vcproj
+++ b/Code/Mantid/Nexus/Nexus.vcproj
@@ -188,6 +188,10 @@
 				RelativePath=".\src\SaveNeXus.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\src\SaveNexusProcessed.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -224,6 +228,14 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidNexus\SaveNeXus.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidNexus\SaveNexusProcessed.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\SaveNexusProcessedTest.h"
 				>
 			</File>
 			<File
