--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -174,6 +174,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\ChangeBinOffset.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\CommutativeBinaryOperation.cpp"
 				>
 			</File>
@@ -273,6 +277,10 @@
 			</File>
 			<File
 				RelativePath=".\test\ChainedOperatorTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\ChangeBinOffset.h"
 				>
 			</File>
 			<File
