Added ManagedRawFileWorkspace2D workspace which does not load the data into memory until it is needed. LoadRaw2 and MantidPlot are modified to use it. re #190

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -224,6 +224,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\ManagedRawFileWorkspace2D.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\MarkDeadDetectors.cpp"
 				>
 			</File>
@@ -323,6 +327,10 @@
 			</File>
 			<File
 				RelativePath=".\test\LoadRawTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\ManagedRawFileWorkspace2D.h"
 				>
 			</File>
 			<File
