SaveNexusProcessed updated. Now writes most required data, but lacking detector spectra map and time series properties. Re #215

--- a/Code/Mantid/Nexus/Nexus.vcproj
+++ b/Code/Mantid/Nexus/Nexus.vcproj
@@ -181,6 +181,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\NexusFileWriter.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\NeXusUtils.cpp"
 				>
 			</File>
@@ -220,6 +224,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidNexus\MuonNexusReader.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidNexus\NexusFileWriter.h"
 				>
 			</File>
 			<File
