First attempt at added an algorithm for visualising an instrument without first needing to load in a raw datafile. Refs #261.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -200,6 +200,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LoadEmptyInstrument.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadInstrument.cpp"
 				>
 			</File>
@@ -287,6 +291,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidDataHandling\LoadDAE.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\LoadEmptyInstrument.h"
 				>
 			</File>
 			<File
