Separate the curve fitting algorithms into a CurveFitting library. Refs #193.

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -253,6 +253,7 @@ subProjs.append('Geometry')
 subProjs.append('API')
 subProjs.append('DataObjects')
 subProjs.append('Algorithms')
+subProjs.append('CurveFitting')
 subProjs.append('DataHandling')
 subProjs.append('Nexus')
 subProjs.append('PythonAPI')
