--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -56,7 +56,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)kernel.lib $(SolutionName)DataObjects.lib $(SolutionName)Geometry.lib gsl_d.lib cblas.lib"
+				AdditionalDependencies="$(SolutionName)kernel.lib $(SolutionName)DataObjects.lib $(SolutionName)Geometry.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
 				AdditionalLibraryDirectories="../debug;../../Third_Party/lib/win32"
 				GenerateDebugInformation="true"
@@ -127,7 +127,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(SolutionName)kernel.lib $(SolutionName)DataObjects.lib $(SolutionName)Geometry.lib gsl.lib"
+				AdditionalDependencies="$(SolutionName)kernel.lib $(SolutionName)DataObjects.lib $(SolutionName)Geometry.lib"
 				OutputFile="$(OutDir)\$(SolutionName)$(ProjectName).dll"
 				AdditionalLibraryDirectories="../release;../../Third_Party/lib/win32"
 			/>
@@ -166,10 +166,6 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\src\BackToBackExponentialPeakFit.cpp"
-				>
-			</File>
-			<File
 				RelativePath=".\src\BinaryOperation.cpp"
 				>
 			</File>
@@ -203,10 +199,6 @@
 			</File>
 			<File
 				RelativePath=".\src\FindDeadDetectors.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\src\GaussLeastSquaresFit.cpp"
 				>
 			</File>
 			<File
@@ -268,14 +260,6 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\test\BackToBackExponentialFitTest.h"
-				>
-			</File>
-			<File
-				RelativePath=".\inc\MantidAlgorithms\BackToBackExponentialPeakFit.h"
-				>
-			</File>
-			<File
 				RelativePath=".\inc\MantidAlgorithms\BinaryOperation.h"
 				>
 			</File>
@@ -333,14 +317,6 @@
 			</File>
 			<File
 				RelativePath=".\test\FindDeadDetectorsTest.h"
-				>
-			</File>
-			<File
-				RelativePath=".\inc\MantidAlgorithms\GaussLeastSquaresFit.h"
-				>
-			</File>
-			<File
-				RelativePath=".\test\GaussLeastSquaresFitTest.h"
 				>
 			</File>
 			<File
