Test for LoadEmptyInstrumentTest. Refs #261.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -298,6 +298,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\LoadEmptyInstrumentTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidDataHandling\LoadInstrument.h"
 				>
 			</File>
