TableWorkspace class is added. re #284

--- a/Code/Mantid/DataObjects/DataObjects.vcproj
+++ b/Code/Mantid/DataObjects/DataObjects.vcproj
@@ -164,6 +164,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\ColumnFactory.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Histogram1D.cpp"
 				>
 			</File>
@@ -173,6 +177,14 @@
 			</File>
 			<File
 				RelativePath=".\src\ManagedWorkspace2D.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\TableColumn.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\TableWorkspace.cpp"
 				>
 			</File>
 			<File
@@ -193,6 +205,14 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\inc\MantidDataObjects\Column.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataObjects\ColumnFactory.h"
+				>
+			</File>
 			<File
 				RelativePath=".\inc\MantidDataObjects\Histogram1D.h"
 				>
@@ -215,6 +235,18 @@
 			</File>
 			<File
 				RelativePath=".\test\ManagedWorkspace2DTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataObjects\TableColumn.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataObjects\TablePointerColumn.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataObjects\TableWorkspace.h"
 				>
 			</File>
 			<File
