TableRow class is moved to a file of its own. Tuples are temporarily removed from TableWorkspace. TableWorkspace and TableRow should work reasonable well with bools. re #284.

--- a/Code/Mantid/DataObjects/DataObjects.vcproj
+++ b/Code/Mantid/DataObjects/DataObjects.vcproj
@@ -184,6 +184,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\TableRow.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\TableWorkspace.cpp"
 				>
 			</File>
@@ -243,6 +247,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidDataObjects\TablePointerColumn.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataObjects\TableRow.h"
 				>
 			</File>
 			<File
