DLLbloodyExport. Which actually shouldn't be necessary for Algorithms except for purposes of the tests that instantiate the class directly instead of via the factory. By the way, the test still fails on Windows because it claims the Gaussian algorithm isn't registered. ????? Re #227.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -250,6 +250,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\StripPeaks.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Unwrap.cpp"
 				>
 			</File>
@@ -393,6 +397,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\SmoothData.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\StripPeaks.h"
 				>
 			</File>
 			<File
