Added LoadNexusProcessed algorithm to get back a workspace from Nexus file written by SaveNexusProcessed. LoadNexusProcessedRaw.h tests the cycle of load from raw, save to Nexus, load from Nexus, check data. Needs additions for instrument reading and spectra maps. Re #215

--- a/Code/Mantid/Nexus/Nexus.vcproj
+++ b/Code/Mantid/Nexus/Nexus.vcproj
@@ -177,7 +177,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LoadNexusProcessed.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\MuonNexusReader.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\NexusFileIO.cpp"
 				>
 			</File>
 			<File
@@ -220,6 +228,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidNexus\LoadNeXus.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidNexus\LoadNexusProcessed.h"
 				>
 			</File>
 			<File
