--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -120,6 +120,32 @@ else:
 		third_party=''
 		python_path = ''
 		boost_append = ''
+		
+	#Find the boost_path and the boost append
+	startPath = '/usr/local/include/'
+	dirpath=os.listdir(startPath)
+	while(len(dirpath)):
+		try:
+			item=dirpath.pop(0)
+			if item.startswith('boost'):
+				for file in os.listdir(startPath+item):
+					print file
+					if file == 'weak_ptr.hpp':
+						boost_path = startPath
+					elif file.startswith('boost'):
+						boost_path =startPath+item				
+		except:
+			pass
+
+	dirpath=os.listdir('/usr/local/lib/')
+	while(len(dirpath)):
+		try:
+			item=dirpath.pop(0)
+			m=re.search("libboost_python(.*).so", item)
+			if m != None:
+				boost_append=m.group(1)
+		except:
+			pass	
 	
 print "POCO_ROOT: ",poco_path
 print "BOOST_ROOT: ",boost_path
@@ -141,7 +167,6 @@ else:
 	if not rpmBuild:
 		cppPaths.append(poco_path + 'include')
 		cppPaths.append(poco_path +'Util')
-		cppPaths.append(boost_path)
 		libDirList.append(USRLOCALLIB)
 		if os.path.isdir('/usr/local/poco-1.3.1/'+ '/lib/Linux/i686') :
 			libDirList.append('/usr/local/poco-1.3.1/' +'/lib/Linux/i686')
@@ -151,6 +176,7 @@ else:
 		cppPaths.append(USRLOCALINCLUDE + '/Poco/')
 		cppPaths.append(USRLOCALINCLUDE+'/Poco/Util')
 		
+	cppPaths.append(boost_path)
 	cppPaths.append(USRINCLUDE)
 	cppPaths.append(USRLOCALINCLUDE)
 	cppPaths.append(USRINCLUDE+ '/python' + sys.version[0:3])
