--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -208,6 +208,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\GluGeometryHandler.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\GluGeometryRenderer.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\GtsGeometryGenerator.cpp"
 				>
 			</File>
@@ -458,6 +466,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidGeometry\GluGeometryHandler.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidGeometry\GluGeometryRenderer.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidGeometry\GtsGeometryGenerator.h"
 				>
 			</File>
@@ -586,11 +602,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\RotCounter.h"
+				RelativePath=".\inc\MantidGeometry\RotCounter.h"
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidGeometry\RotCounter.h"
+				RelativePath=".\auxinc\RotCounter.h"
 				>
 			</File>
 			<File
