Added a version 2 of the Gaussian fit which fits on top of a linear background instead of a flat one. Re #227.

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -195,6 +195,10 @@
 				RelativePath=".\src\Gaussian.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\src\GaussianLinearBG.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -211,6 +215,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidCurveFitting\Gaussian.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidCurveFitting\GaussianLinearBG.h"
 				>
 			</File>
 			<File
